[EFL] Fix building with Glib support disabled https://bugs.webkit.org/show_bug.cgi?id=70990

Patch by Ivan Briano <ivan@profusion.mobi> on 2011-12-23
Reviewed by Martin Robinson.

Add forward declaration for cairo_surface_t, missing when building
the EFL port with Glib disabled.

* platform/cairo/WidgetBackingStore.h:

Canonical link: https://commits.webkit.org/91919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103614 268f45cc-cd09-0410-ab3c-d52691b4dbfc